fix gap

--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -7,7 +7,7 @@
     align-content: space-around;
     display: flex;
     flex-flow: row wrap;
-    gap: 100px 30px;
+    gap: 3rem 1rem;
 
     .eventCard{
         max-width: 320px;
