--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,7 +17,7 @@ h1{
 body {
     background-color: $light-color;
     font-family: $secondary-font;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 a{
